--- a/templates/home/search.html
+++ b/templates/home/search.html
@@ -1,29 +1,13 @@
 {% extends 'basic.html' %}
 
-{% block title %} Home {% endblock %}
-{% block homeactive %} active {% endblock %}
+{% block title %} {{ query }} - Results {% endblock %}
 
 {% block body %}
 {% load humanize %}
-<div class="px-4 py-5 my-5 text-center">
-    <h1 class="display-5 fw-bold">Welcome to iCoder</h1>
-    <div class="col-lg-6 mx-auto">
-      <p class="lead mb-4">Here, we create a system for all the coders out there to express their views
-      through blogs and expand their networks. At iCoder, we aim to build an open source
-      community that helps each other in all the circumstances. If you have any queries, you can contact
-      us anytime by clicking the button below!</p>
-      <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-        <a href="/blog/" type="button" class="blogbtn btn btn-primary btn-lg px-4 gap-3" >Explore Blogs</a>
-        <a href="/contact/" type="button" class="contactbtn btn btn-outline-secondary btn-lg px-4">Contact Us</a>
-      </div>
-    </div>
-  </div>
-
-<div class="container" id="blogs">
-    <h3 class="my-4">Top Blogs in this Month</h3>
+<div class="container">
+    <h3 class="my-4">Search Results:</h3>
     <div class="row mb-2">
-
-
+        <hr>
 {% for post in posts %}
     <div class="col-md-6">
       <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
@@ -40,8 +24,17 @@
       </div>
     </div>
 {% endfor %}
-
-
+{% if not posts %}
+        <h6>No search results</h6>
+    <p>Your search : <b>{{ query }}</b> did not match any documents. <br></p>
+    Suggestions:
+    <ul>
+    <li>Make sure that all words are spelled correctly.</li>
+    <li>Try more general keywords.</li>
+   <li> Try fewer keywords.</li>
+   <li> Try different keywords.</li>
+    </ul>
+        {% endif %}
   </div>
 </div>
     {% endblock %}
